--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/morgan": "^1.9.2",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^14.14.31",
     "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
@@ -45,7 +46,9 @@
     "fs": "0.0.1-security",
     "helmet": "^4.4.1",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "prettier": "^2.6.2",
     "reflect-metadata": "^0.1.13",
     "require-json5": "^1.1.0",
     "sqlite3": "^5.0.2",
