--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.7",
     "@types/mysql": "^2.15.21",
     "@types/node": "^14.14.31",
+    "@types/papaparse": "^5.3.2",
     "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
@@ -46,8 +48,10 @@
     "fs": "0.0.1-security",
     "helmet": "^4.4.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "papaparse": "^5.3.2",
     "prettier": "^2.6.2",
     "reflect-metadata": "^0.1.13",
     "require-json5": "^1.1.0",
